--- a/src/web-ng/package.json
+++ b/src/web-ng/package.json
@@ -19,27 +19,29 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@progress/kendo-angular-buttons": "^7.0.0",
     "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-dateinputs": "^6.0.0",
     "@progress/kendo-angular-dropdowns": "^6.0.0",
+    "@progress/kendo-angular-excel-export": "^4.0.0",
     "@progress/kendo-angular-grid": "^6.1.3",
     "@progress/kendo-angular-inputs": "^8.0.0",
     "@progress/kendo-angular-intl": "^3.0.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-label": "^3.0.0",
+    "@progress/kendo-angular-layout": "^6.6.0",
     "@progress/kendo-angular-notification": "^3.0.5",
+    "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-angular-progressbar": "^2.0.0",
     "@progress/kendo-angular-treeview": "^6.0.0",
+    "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-licensing": "^1.0.2",
-    "@progress/kendo-theme-default": "^5.0.0",
+    "@progress/kendo-theme-default": "^5.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
-    "@progress/kendo-angular-buttons": "^7.0.0",
-    "@progress/kendo-angular-dateinputs": "^6.0.0",
-    "@progress/kendo-angular-excel-export": "^4.0.0",
-    "@progress/kendo-angular-label": "^3.0.0",
-    "@progress/kendo-angular-pdf-export": "^3.0.0",
-    "@progress/kendo-data-query": "^1.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
