Added Login and Signup module
Added base code for login and signup.

--- a/src/web-ng/package.json
+++ b/src/web-ng/package.json
@@ -11,12 +11,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.1",
+    "@angular/cdk": "^13.3.2",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~12.1.1",
     "@angular/localize": "~12.1.1",
+    "@angular/material": "^13.3.2",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
@@ -30,18 +32,20 @@
     "@progress/kendo-angular-intl": "^3.0.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
     "@progress/kendo-angular-label": "^3.0.0",
+    "@progress/kendo-angular-layout": "^6.6.0",
     "@progress/kendo-angular-notification": "^3.0.5",
     "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
     "@progress/kendo-angular-treeview": "^6.0.0",
     "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.5.12",
-    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^5.0.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@progress/kendo-angular-progressbar": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
